fixed overflow text on home page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
   align-items: stretch;
 }
 
